--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,18 +1,13 @@
 .App {
-	text-align: center;
+	display: grid;
+	place-content: center;
+	width: 100vw;
+	min-height: 100vh;
 }
 
-.App-header {
-	min-height: 100vh;
+.App .App-links {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-	color: #61dafb;
 }
 
 button {
