--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	background-color: #282c34;
 	color: white;
+	width: 100vw;
 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -13,4 +14,11 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
+}
+
+a {
+	color: #61dafb;
+	text-decoration: none;
+	margin: 0.5rem 0;
+	cursor: pointer;
 }
