--- a/src/components/Gif/Gif.css
+++ b/src/components/Gif/Gif.css
@@ -1,3 +1,24 @@
+.Gif {
+	margin-bottom: 1rem;
+}
+
+.Gif .Gif-link {
+	position: relative;
+}
+
+.Gif h4 {
+	position: absolute;
+	background: rgba(0, 0, 0, .3);
+	bottom: 0;
+	margin: 0;
+	padding: 3px;
+	font-size: 0.7rem;
+	color: #fff;
+
+}
+
 .Gif img {
-	width: 50px;
+	width: 100%;
+	object-fit: contain;
+	vertical-align: top;
 }
