--- a/src/components/Gif/Gif.css
+++ b/src/components/Gif/Gif.css
@@ -8,13 +8,11 @@
 
 .Gif h4 {
 	position: absolute;
-	background: rgba(0, 0, 0, .3);
+	background: rgba(0, 0, 0, 0.3);
 	bottom: 0;
 	margin: 0;
-	padding: 3px;
 	font-size: 0.7rem;
 	color: #fff;
-
 }
 
 .Gif img {
