--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
+html {
+	box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
 body {
 	margin: 0;
 	padding: 0;
 	background-color: #282c34;
 	color: white;
-	width: 100vw;
 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -18,8 +27,16 @@ code {
 }
 
 a {
-	color: #fff;
+	color: #09f;
 	display: block;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+input[type="text"] {
+	/*border-radius: 0 10px 10px 0;*/
+	border-radius: 10px;
+	font-size: 16px;
+	border: none;
+	padding: 4px 16px;
 }
