--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,11 +1,11 @@
-.Categorys {
+.Categories {
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
 	margin: 3rem 0;
 }
 
-.Categorys-trend {
+.Categories-trend {
 	display: flex;
 	gap: 1rem;
 	flex-wrap: wrap;
